test/unittest/error/tst.clause_scope-regular.r
Error fired
Clause executed

-- @@stderr --
dtrace: error on enabled probe ID 3 (ID nnn: profile:::tick-10ms): invalid address ({ptr}) in action #1 at BPF pc NNN
